setup content collection

--- a/client/src/content/guidelines.mdx
+++ b/client/src/content/guidelines.mdx
@@ -20,17 +20,17 @@ In short, here's the gist of it:
 
 ## 1. Characters that are *strictly* show animalistic traits
 
-
 If a character doesn't show form of verbal communication, it should have some form of sapience or empathy.
 
 ### 1a. Anthro-Adjacent Franchises (Pokémon, Digimon, etc.)
 
-### 1b. Characters with Shapeshifting Forms
+### 1b. Fictional species
 
-## 2. Tied to a brand/reputable IP
+### 1c. Characters with Shapeshifting Forms
+
+## 2. Character must be tied to a brand/reputable IP
 
 ### 2a. Mascots
-### 2b. Fictional characters
 
 ## 3. Notability and Metadata
 
