update faq and guidelines

--- a/client/src/content/guidelines.mdx
+++ b/client/src/content/guidelines.mdx
@@ -1,11 +1,11 @@
 ---
 title: Guidelines
-description: Guidelines of maintaining a database of fluffy creatures
+description: Guidelines of maintaining a database of verifiable fluffy creatures
 ---
 
 # {title}
 
-Flinky is a crowd-sourced curation site about cataloging real, notable, and anthropomorphic characters from all sorts of consumer media, with a clear source trail and proper context—no fan-made knockoffs, no meme animals, and no "THIS MY OC, DON'T STEAL!!!11!" entries.
+*Flinky* is a crowd-sourced curation site about cataloging real, notable, and *fluffy* anthropomorphic characters from all sorts of consumer media, with a clear source trail and proper context—no fan-made knockoffs, no meme animals, and no "THIS MY OC, DON'T STEAL!!!11!" entries.
 
 In short, here's the gist of it:
 
@@ -18,29 +18,63 @@ In short, here's the gist of it:
 
 ---
 
-## 1. Characters that are *strictly* show animalistic traits
+## 1. Characters that *strictly* show animalistic traits
 
-If a character doesn't show form of verbal communication, it should have some form of sapience or empathy.
+A character should have the following:
+
+- Show some form of sapience and some tangible form of verbal communication
 
 ### 1a. Anthro-Adjacent Franchises (Pokémon, Digimon, etc.)
 
-### 1b. Fictional species
+## 2. Notability and Metadata
 
-### 1c. Characters with Shapeshifting Forms
+A character should also have a certain level of Notability in order of being indexed in Flinky. There's no specific criteria of when it considers as "famous" a character is, it should be in the bare minimum of nicheness and also being in a tangible medium (e.g. TV, games, books, comics, etc.)
 
-## 2. Character must be tied to a brand/reputable IP
+Tracking a *verifiable* source of the character increases the likelihood of it being in the db and it should be one or more of the following:
 
-### 2a. Mascots
+- Official websites, including ones from the Wayback Machine
+- News coverage, press releases
+- Interviews or posts from a creator[^1]
+- Various social media from a creator
+- Platform listings from monetized platforms (e.g., Steam, Kickstarter, Nintendo eShop, GoFundMe, etc.)
 
-## 3. Notability and Metadata
+[^1]: The "creator" can be an individual, a group, or a studio; sometimes even a distributor, if eligible.
 
-### 3a. Fan-Made and AUs
+Optionally, a character should have a backstory or narrative arc, therefore making a character notable
+
+### 2b. Citing *Fandom* wikis
+
+Citing sources from a community-based wiki farm like Fandom, can be a double-edged sword; on one hand, it can provide substantial data about the character or franchise in question, but, in some wikis, a lack of citation or proper sourcing to back claims of such, thus citing Fandom wikis dubious - especially challenging info that needs citation.
+
+## 3. Fan-Made and AU (alternate universe) content
 
 This pertains to characters that belong to oneself, especially when used as an avatar, this includes:
 
-- **Fursonas**: These are used as a self-expression and do not qualify in section 2a and 2b.
-- **Edits of existing characters**: Whether your character is an altered version of *Sonic*, it won't make the cut. 
+- **Fursonas**: These are used as a self-expression and do not qualify in section 3
+- **Edits of existing characters**: Whether your character is an altered version of *Sonic* or *Nick Wilde*, it won't make the cut.
+
+#### Examples
+
+WIP
+
+### 3a. Corporate mascots
+
+Characters like *Tony the Tiger*, and even *Octocat* are allowed since a mascots purpose is to support the brand or a company, thus making it notable.
+
+#### Examples
+
+| Character      | Brand/company |
+| -------------- | ------------- |
+| Tony the Tiger | Kellogs       |
+| GEICO Gecko    | GEICO         | 
+
+
+## 4. Special exceptions
+
+WIP
 
 ## Bottom line
 
-Make sure you do your due diligence and verify the character’s existence by doing a background check and to ensure that it’s not fabricated in any way—preferably backed up by its source material and it only takes more than just screenshots, ya dingus.
+Make sure you do your due diligence and verify the character's existence by doing a background check and to ensure that it's not fabricated in any way - preferably backed up by its source material and it only takes more than just screenshots.
+
+...Ya dingus.
