added search field and list shelf
- added some more icons
- added some meta tags for iphone stuff
- minor ui changes: footer, navbar
- added import alias to improve DX

--- a/client/src/content/guidelines.mdx
+++ b/client/src/content/guidelines.mdx
@@ -7,14 +7,14 @@ description: Guidelines of maintaining a database of verifiable fluffy creatures
 
 *Flinky* is a crowd-sourced curation site about cataloging real, notable, and *fluffy* anthropomorphic characters from all sorts of consumer media, with a clear source trail and proper context—no fan-made knockoffs, no meme animals, and no "THIS MY OC, DON'T STEAL!!!11!" entries.
 
-In short, here's the gist of it:
-
-- ✅ A character should have animalistic/anthropomorphic features
-- ✅ Must be tied to a brand or reputable IP and have a decent amount of media presence
-  - ✅ Corporate anthro characters are also permissible as along it's not a generic logo
-- ❌ It shouldn't be any one else's fursona that's used as their personal avatar
-- ❌ It also shouldn't be a modified or recolors from an existing character from a known Franchise
-- ❌ Character(s) that are fabricated that may otherwise lead to a conflict of interest
+> In short, here's the gist of it:
+> 
+> - ✅ A character *should* have animalistic/anthropomorphic features
+> - ✅ Must be tied to a brand or reputable IP and have a decent amount of media presence
+>   - ✅ Corporate anthro characters are also permissible as along it's not a generic logo
+> - ❌ It shouldn't be any one else's fursona that's used as their personal avatar
+> - ❌ It also shouldn't be a modified or recolors from an existing character from a known Franchise
+> - ❌ Character(s) that are fabricated that may otherwise lead to a conflict of interest
 
 ---
 
@@ -22,13 +22,28 @@ In short, here's the gist of it:
 
 A character should have the following:
 
-- Show some form of sapience and some tangible form of verbal communication
+- Show some form of sapience and some tangible form of communication (verbally or gestures)
 
 ### 1a. Anthro-Adjacent Franchises (Pokémon, Digimon, etc.)
 
-## 2. Notability and Metadata
+WIP
 
-A character should also have a certain level of Notability in order of being indexed in Flinky. There's no specific criteria of when it considers as "famous" a character is, it should be in the bare minimum of nicheness and also being in a tangible medium (e.g. TV, games, books, comics, etc.)
+## 1b. Corporate mascots
+
+Characters such as *Tony the Tiger*, and *Octocat* are allowed since a mascots purpose is to support the brand or a company.
+
+#### Examples
+
+| Character      | Brand/company |
+| -------------- | ------------- |
+| Tony the Tiger | Kellogs       |
+| GEICO Gecko    | GEICO         | 
+| Octocat        | GitHub        | 
+
+
+## 2. Notability
+
+A character should also have a certain level of notability in order of being accepted in Flinky. There are no specific criteria of when it considers as "famous" a character is, it should be in the bare minimum of nicheness and also being in a tangible medium (e.g. TV, games, books, comics, etc.)
 
 Tracking a *verifiable* source of the character increases the likelihood of it being in the db and it should be one or more of the following:
 
@@ -38,11 +53,11 @@ Tracking a *verifiable* source of the character increases the likelihood of it b
 - Various social media from a creator
 - Platform listings from monetized platforms (e.g., Steam, Kickstarter, Nintendo eShop, GoFundMe, etc.)
 
-[^1]: The "creator" can be an individual, a group, or a studio; sometimes even a distributor, if eligible.
+[^1]: A creator can be an individual, a group, or a studio; sometimes even a distributor, if eligible.
 
-Optionally, a character should have a backstory or narrative arc, therefore making a character notable
+Optionally, a character should have a backstory or narrative arc, therefore making a character notable.
 
-### 2b. Citing *Fandom* wikis
+### 2a. Citing *Fandom* wikis
 
 Citing sources from a community-based wiki farm like Fandom, can be a double-edged sword; on one hand, it can provide substantial data about the character or franchise in question, but, in some wikis, a lack of citation or proper sourcing to back claims of such, thus citing Fandom wikis dubious - especially challenging info that needs citation.
 
@@ -50,31 +65,17 @@ Citing sources from a community-based wiki farm like Fandom, can be a double-edg
 
 This pertains to characters that belong to oneself, especially when used as an avatar, this includes:
 
-- **Fursonas**: These are used as a self-expression and do not qualify in section 3
-- **Edits of existing characters**: Whether your character is an altered version of *Sonic* or *Nick Wilde*, it won't make the cut.
+- **Fursonas**: These are used as a self-expression and are not qualified
+- **Edits of existing characters**: Whether your character is an altered version of *Sonic* or *Nick Wilde*, isn't allowed either.
 
-#### Examples
+### Examples
 
 WIP
 
-### 3a. Corporate mascots
-
-Characters like *Tony the Tiger*, and even *Octocat* are allowed since a mascots purpose is to support the brand or a company, thus making it notable.
-
-#### Examples
-
-| Character      | Brand/company |
-| -------------- | ------------- |
-| Tony the Tiger | Kellogs       |
-| GEICO Gecko    | GEICO         | 
-
-
-## 4. Special exceptions
+### 3a. Special exceptions
 
 WIP
 
 ## Bottom line
 
 Make sure you do your due diligence and verify the character's existence by doing a background check and to ensure that it's not fabricated in any way - preferably backed up by its source material and it only takes more than just screenshots.
-
-...Ya dingus.
