refine guidelines for character eligibility and notability criteria

--- a/client/src/content/guidelines.mdx
+++ b/client/src/content/guidelines.mdx
@@ -5,7 +5,7 @@ description: Guidelines of maintaining a database of verifiable fluffy creatures
 
 # {title}
 
-*Flinky* is a crowd-sourced curation site about cataloging real, notable, and *fluffy* anthropomorphic characters from all sorts of consumer media, with a clear source trail and proper context—no fan-made knockoffs, no meme animals, and no "THIS MY OC, DON'T STEAL!!!11!" entries.
+*Flinky* is a crowd-sourced curation site about cataloging real, notable, and *fluffy* anthropomorphic characters from all sorts of consumer media, with a clear source trail and proper context—no fan-made knockoffs, no *real* animals, and certainly no "THIS MY OC, DON'T STEAL!" entries.
 
 > In short, here's the gist of it:
 > 
@@ -13,7 +13,7 @@ description: Guidelines of maintaining a database of verifiable fluffy creatures
 > - ✅ Must be tied to a brand or reputable IP and have a decent amount of media presence
 >   - ✅ Corporate anthro characters are also permissible as along it's not a generic logo
 > - ❌ It shouldn't be any one else's fursona that's used as their personal avatar
-> - ❌ It also shouldn't be a modified or recolors from an existing character from a known Franchise
+> - ❌ It also shouldn't be a modified or recolors from an existing character(s)
 > - ❌ Character(s) that are fabricated that may otherwise lead to a conflict of interest
 
 ---
@@ -28,7 +28,7 @@ A character should have the following:
 
 WIP
 
-## 1b. Corporate mascots
+### 1b. Corporate mascots
 
 Characters such as *Tony the Tiger*, and *Octocat* are allowed since a mascots purpose is to support the brand or a company.
 
@@ -43,14 +43,14 @@ Characters such as *Tony the Tiger*, and *Octocat* are allowed since a mascots p
 
 ## 2. Notability
 
-A character should also have a certain level of notability in order of being accepted in Flinky. There are no specific criteria of when it considers as "famous" a character is, it should be in the bare minimum of nicheness and also being in a tangible medium (e.g. TV, games, books, comics, etc.)
+A character should also have a certain level of notability in order of being accepted in Flinky. There's no specific criteria of how "famous" a character is, it should be in the bare minimum of nicheness and also being in a tangible medium (e.g. TV, games, books, comics, etc.)
 
 Tracking a *verifiable* source of the character increases the likelihood of it being in the db and it should be one or more of the following:
 
-- Official websites, including ones from the Wayback Machine
+- Official websites, including ones from the Wayback Machine if the official site is down
 - News coverage, press releases
 - Interviews or posts from a creator[^1]
-- Various social media from a creator
+- Various social media updates from a creator[^1]
 - Platform listings from monetized platforms (e.g., Steam, Kickstarter, Nintendo eShop, GoFundMe, etc.)
 
 [^1]: A creator can be an individual, a group, or a studio; sometimes even a distributor, if eligible.
@@ -61,18 +61,17 @@ Optionally, a character should have a backstory or narrative arc, therefore maki
 
 Citing sources from a community-based wiki farm like Fandom, can be a double-edged sword; on one hand, it can provide substantial data about the character or franchise in question, but, in some wikis, a lack of citation or proper sourcing to back claims of such, thus citing Fandom wikis dubious - especially challenging info that needs citation.
 
-## 3. Fan-Made and AU (alternate universe) content
+### 3. Fan-Made and AU (alternate universe) content
 
-This pertains to characters that belong to oneself, especially when used as an avatar, this includes:
+Fan-made characters aren't allowed; especially to characters that belong to oneself, especially when used as an avatar, this includes:
 
 - **Fursonas**: These are used as a self-expression and are not qualified
+  - Notable figures in the furry fandom (i.e. Majira Strawberry, BetaEtaDelota, Pocari Roo, etc.) *do* have a certain level of notability, but they're aren't elligible to be in the list.
 - **Edits of existing characters**: Whether your character is an altered version of *Sonic* or *Nick Wilde*, isn't allowed either.
 
-### Examples
+This is to prevent conflict of interest or potential bias that would raise issues, and Flinky "clean" and aim to target to a general audience as much as possible.
 
-WIP
-
-### 3a. Special exceptions
+### 3. Special exceptions
 
 WIP
 
