--- a/client/src/content/guidelines.mdx
+++ b/client/src/content/guidelines.mdx
@@ -61,7 +61,7 @@ Optionally, a character should have a backstory or narrative arc, therefore maki
 
 Citing sources from a community-based wiki farm like Fandom, can be a double-edged sword; on one hand, it can provide substantial data about the character or franchise in question, but, in some wikis, a lack of citation or proper sourcing to back claims of such, thus citing Fandom wikis dubious - especially challenging info that needs citation.
 
-### 3. Fan-Made and AU (alternate universe) content
+## 3. Fan-Made and AU (alternate universe) content
 
 Fan-made characters aren't allowed; especially to characters that belong to oneself, especially when used as an avatar, this includes:
 
@@ -71,7 +71,7 @@ Fan-made characters aren't allowed; especially to characters that belong to ones
 
 This is to prevent conflict of interest or potential bias that would raise issues, and Flinky "clean" and aim to target to a general audience as much as possible.
 
-### 3. Special exceptions
+## 4. Special exceptions
 
 WIP
 
