--- a/client/src/content/guidelines.mdx
+++ b/client/src/content/guidelines.mdx
@@ -26,7 +26,9 @@ A character should have the following:
 
 ### 1a. Anthro-Adjacent Franchises (Pokémon, Digimon, etc.)
 
-WIP
+Characters from popular and well-known franchises that are as complex like *Pokémon* and *Digimon* are reviewed in a case-by-case basis.
+
+Take *Pokémon* for instance, a simple Pikachu in the wild won't cut it. However, if a certain Pokémon has some significant background, like Ash Ketchum's Pikachu or Team Rocket's Meowth; any of its spin-off series such as the *Mystery Dungeon* games, then it's elligible.
 
 ### 1b. Corporate mascots
 
