--- a/client/src/content/guidelines.mdx
+++ b/client/src/content/guidelines.mdx
@@ -28,11 +28,11 @@ A character should have the following:
 
 Characters from popular and well-known franchises that are as complex like *Pokémon* and *Digimon* are reviewed in a case-by-case basis.
 
-Take *Pokémon* for instance, a simple Pikachu in the wild won't cut it. However, if a certain Pokémon has some significant background, like Ash Ketchum's Pikachu or Team Rocket's Meowth; any of its spin-off series such as the *Mystery Dungeon* games, then it's elligible.
+Take *Pokémon* for instance, a simple Pikachu in the wild won't cut it. However, if a certain Pokémon has some significant background, like Ash Ketchum's Pikachu or Team Rocket's Meowth; any of its spin-off series such as the *Mystery Dungeon* games, such as Grovyle, then it's elligible.
 
 ### 1b. Corporate mascots
 
-Characters such as *Tony the Tiger*, and *Octocat* are allowed since a mascots purpose is to support the brand or a company.
+Characters such as Kellogs' *Tony the Tiger*, and GitHub's *Octocat* are allowed since a mascots purpose is to support the brand or a company.
 
 #### Examples
 
